update login and signup

--- a/smart-lock-frontend/public/index.html
+++ b/smart-lock-frontend/public/index.html
@@ -6,6 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Smart Lock Control System" />
     <title>Smart Lock System</title>
+    <script>
+      window.NODE_ENV = 'development';
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
